--- a/internal/web/templates/layout.templ
+++ b/internal/web/templates/layout.templ
@@ -15,6 +15,61 @@ templ Layout(title string, content templ.Component) {
 			<script>
 				window.scrollTo(0, 0);
 			</script>
+			<style>
+            #asset-list {
+                display: grid;
+                grid-template-columns: repeat(3, 1fr); /* 3 items per row */
+                gap: 20px; /* Adjust the gap between grid items */
+            }
+
+            .asset {
+                text-align: left; /* Center-align text */
+            }
+
+            .asset a {
+                text-decoration: none; /* Remove underline from links */
+                overflow: hidden;
+            }
+
+            .asset img {
+                border-radius: 8px;
+                border: 2px solid black;
+            }
+
+            .asset-head {
+                min-height: 6.8rem;
+            }
+
+            .asset-title {
+                font-weight: bold;
+                padding: 4px 0px 4px 0px;
+                margin-bottom: 4px;
+                overflow: hidden;
+                font-size: 1.6rem;
+
+                -webkit-line-clamp: 2;
+                -webkit-box-orient: vertical;
+                display: -webkit-box;
+            }
+
+            .asset-author {
+                font-size: 1.6rem;
+            }
+
+            .asset-description {
+                padding-top: 0.3rem;
+                color: gray;
+                font-size: 1.5rem;
+                overflow: hidden;
+                max-height: 4rem;
+                font-style: italic;
+                margin: 3px 0px 3px 0px;
+
+                -webkit-line-clamp: 2;
+                -webkit-box-orient: vertical;
+                display: -webkit-box;
+            }
+            </style>
 		</head>
 		<body>
 			<main>
