oops i deleted the storage package before commiting, but now i have it back

--- a/internal/web/templates/index.templ
+++ b/internal/web/templates/index.templ
@@ -9,7 +9,7 @@ templ Index() {
 				<p style="font-size: 1.6rem; margin: 0;">search itch.io/game-assets by text instead of just tags.</p>
 				<p style="font-size: 1.6rem; margin: 0;">created by <a href="#">winterveil</a>.</p>
 				<p style="font-size: 1.6rem; margin: 0; text-align: left; margin-top: -0.4rem;">
-					<a href="#">CONTACT</a> <a href="#">ABOUT</a> <a href="">GITHUB</a>
+					<a href="#TODO" target="_blank">ABOUT</a> <a href="https://github.com/wintermute-cell/itchgrep" target="_blank">GITHUB</a> <a href="https://www.buymeacoffee.com/winterv" target="_blank">DONATE</a>
 				</p>
 			</div>
 		</div>
