--- a/internal/web/templates/index.templ
+++ b/internal/web/templates/index.templ
@@ -3,37 +3,41 @@ package templates
 templ Index() {
 	<div>
 		<div style="display: flex; justify-content: space-between; align-items: center;">
-			<h1 style="cursor: pointer;" hx-on::click="window.location.href='/';">ITCHGREP</h1>
+			<h1 style="cursor: pointer;" hx-on:click="window.location.href='/'; window.location.reload();">ITCHGREP</h1>
 			<div style="text-align: right;">
 				<!-- Right-aligned project description -->
 				<p style="font-size: 1.6rem; margin: 0;">search itch.io/game-assets by text instead of just tags.</p>
 				<p style="font-size: 1.6rem; margin: 0;">created by <a href="#">winterveil</a>.</p>
 				<p style="font-size: 1.6rem; margin: 0; text-align: left; margin-top: -0.4rem;">
-					<a href="#TODO" target="_blank">ABOUT</a> <a href="https://github.com/wintermute-cell/itchgrep" target="_blank">GITHUB</a> <a href="https://www.buymeacoffee.com/winterv" target="_blank">DONATE</a>
+					<a href="https://github.com/wintermute-cell" hx-get="/about" hx-swap="outerHTML" hx-target="#page-content">ABOUT</a>
+					<a href="https://github.com/wintermute-cell/itchgrep" target="_blank">GITHUB</a>
+					<a href="https://www.buymeacoffee.com/winterv" target="_blank">DONATE</a>
 				</p>
 			</div>
 		</div>
-		<form
-			hx-post="/query/1"
-			hx-target="#asset-list"
-			hx-swap="innerHTML"
-			style="display: flex; align-items: center;"
-		>
-			<input
-				id="query-input"
-				type="text"
-				name="query"
-				placeholder="bones..."
-				required
-				style="flex-grow: 1; margin-right: 8px; width: auto;"
-			/>
-			<button
-				type="submit"
-				style="line-height: 1.2; margin-bottom: 1.6rem"
-			>SEARCH</button>
-		</form>
-		<div id="asset-list">
-			<div hx-get="/assets/1" hx-trigger="load" hx-swap="outerHTML" hx-target="this"></div>
+		<div id="page-content">
+			<form
+				hx-post="/query/1"
+				hx-target="#asset-list"
+				hx-swap="innerHTML"
+				style="display: flex; align-items: center;"
+			>
+				<input
+					id="query-input"
+					type="text"
+					name="query"
+					placeholder="bones..."
+					required
+					style="flex-grow: 1; margin-right: 8px; width: auto;"
+				/>
+				<button
+					type="submit"
+					style="line-height: 1.2; margin-bottom: 1.6rem"
+				>SEARCH</button>
+			</form>
+			<div id="asset-list">
+				<div hx-get="/assets/1" hx-trigger="load" hx-swap="outerHTML" hx-target="this"></div>
+			</div>
 		</div>
 	</div>
 }
