--- a/internal/web/templates/index.templ
+++ b/internal/web/templates/index.templ
@@ -7,9 +7,9 @@ templ Index() {
 			<div style="text-align: right;">
 				<!-- Right-aligned project description -->
 				<p style="font-size: 1.6rem; margin: 0;">search itch.io/game-assets by text instead of just tags.</p>
-				<p style="font-size: 1.6rem; margin: 0;">created by <a href="#">winterveil</a>.</p>
+				<p style="font-size: 1.6rem; margin: 0;">created by <a href="https://github.com/wintermute-cell">winterveil</a>.</p>
 				<p style="font-size: 1.6rem; margin: 0; text-align: left; margin-top: -0.4rem;">
-					<a href="https://github.com/wintermute-cell" hx-get="/about" hx-swap="outerHTML" hx-target="#page-content">ABOUT</a>
+					<a href="#" hx-get="/about" hx-swap="outerHTML" hx-target="#page-content">ABOUT</a>
 					<a href="https://github.com/wintermute-cell/itchgrep" target="_blank">GITHUB</a>
 					<a href="https://www.buymeacoffee.com/winterv" target="_blank">DONATE</a>
 				</p>
