add architecture to readme, add twitter and mastodon links to about

--- a/internal/web/templates/about.templ
+++ b/internal/web/templates/about.templ
@@ -1,28 +1,45 @@
 package templates
 
 templ About() {
-	<section>
+	<section style="padding: 0;">
 		<h2>About</h2>
 		<p>
 			I built <a href="/">itchgrep.com</a> to solve a simple problem:
 			finding game assets on itch.io was harder than it needed to be,
-			since the search is only possible by tags. As a solo dev, I wanted
-			a straightforward tool to help me find what I need. That's what
-			this site is no fluff, just a utility to help you and me find what
-			we need.
+			since the search is only possible by tags.
+		</p>
+		<p>
+			As a solo dev, I wanted a straightforward tool to help me find what
+			I need. That's why this site is no fluff, just a utility to help
+			you and me find what we need.
 		</p>
 	</section>
-	<section>
+	<section style="padding: 0;">
 		<h2>Contact</h2>
 		<p>
 			Want to get in contact? Email me:
 			<a href="mailto:winterveil.dev@gmail.com">winterveil.dev@gmail.com</a>.
 		</p>
+		<hr/>
+		<p>
+			I'm on Twitter:
+			<a href="https://twitter.com/winterveil_dev" target="_blank">
+				&commat;winterveil_dev
+			</a>.
+		</p>
+		<p>
+			And mastodon (the better platform!):
+			<a href="https://mastodon.social/@winterveil" target="_blank">
+				&commat;winterveil
+			</a>
+		</p>
+		<hr/>
 		<p>
 			For discussions and community, or if you're interested in what
 			else I build, and how I build it, our Discord is here:
-			<a href="https://discord.gg/f8nyyK4ngZ" target="_blank">Discord</a>.
+			<a href="https://discord.gg/f8nyyK4ngZ" target="_blank">winterveil's netsphere</a>.
 		</p>
+		<hr/>
 		<p>
 			And of course I also have an itch.io profile:
 			<a href="https://winterveil.itch.io/" target="_blank">winterveil.itch.io</a>.
